<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settings_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_label"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/title_color"
        android:background="@color/header_color"/>

    <LinearLayout android:id="@+id/settings_store_interval_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#E5E5E5"
        android:layout_below="@id/settings_label"
        android:padding="20dip"
        android:layout_marginBottom="1dip">

        <TextView android:id="@+id/settings_store_interval_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_store_interval_title"
            android:textColor="#404040"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView android:id="@+id/settings_store_interval_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#404040"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/setting_timezone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#E5E5E5"
        android:layout_below="@id/settings_store_interval_layout"
        android:padding="20dip"
        android:layout_marginBottom="1dip">

        <TextView android:id="@+id/setting_timezone_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_timezone_title"
            android:textColor="#404040"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView android:id="@+id/setting_timezone_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#404040"/>

    </LinearLayout>

    <RelativeLayout android:id="@+id/setting_autorun_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E5E5E5"
        android:padding="20dip"
        android:layout_marginBottom="1dip"
        android:layout_below="@id/setting_timezone_layout">

        <Switch
            android:id="@+id/setting_autorun_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:thumbTextPadding="20dp"/>

        <LinearLayout android:id="@+id/setting_autorun_interval_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#E5E5E5"
            android:layout_toLeftOf="@id/setting_autorun_mode">

            <TextView android:id="@+id/setting_autorun_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_autorun_title"
                android:textColor="#404040"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView android:id="@+id/setting_autorun_start_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#404040"
                    android:textSize="16sp"
                    android:padding="5dip"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dash"
                    android:textColor="#404040"
                    android:textSize="16sp"
                    android:padding="5dip"/>

                <TextView android:id="@+id/setting_autorun_end_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#404040"
                    android:textSize="16sp"
                    android:padding="5dip"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout android:id="@+id/setting_ingnore_battery_optimizations_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E5E5E5"
        android:padding="20dip"
        android:layout_marginBottom="1dip"
        android:layout_below="@id/setting_autorun_layout">

        <Switch
            android:id="@+id/setting_ingnore_battery_optimizations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:thumbTextPadding="20dp"/>

        <TextView android:id="@+id/setting_ingnore_battery_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_ingnore_battery_title"
            android:textColor="#404040"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_toLeftOf="@id/setting_ingnore_battery_optimizations"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <LinearLayout android:id="@+id/setting_api_url_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#E5E5E5"
        android:layout_below="@id/setting_autorun_layout"
        android:padding="20dip"
        android:layout_marginBottom="1dip"
        android:visibility="gone">

        <TextView android:id="@+id/setting_api_url_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_api_url_title"
            android:textColor="#404040"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView android:id="@+id/setting_api_url_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#404040"/>

    </LinearLayout>

</RelativeLayout>